--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ footer .text span a:hover{
               <i class="fab fa-android"></i>
             </div>
             <div class="topic">Icon Design</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>I am also an icon designer.</p>
           </div>
           <div class="box">
             <div class="icon">
