--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Website - www.codingnepalweb.com -->
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
@@ -563,7 +563,7 @@ footer .text span a:hover{
           <div class="text-four">From Nigeria</div>
         </div>
         <div class="button">
-          <button>Hire Me</button>
+          <button action="fulanirhois7@gmail.com">Hire Me</button>
         </div>
       </div>
     </section>
@@ -579,8 +579,7 @@ footer .text span a:hover{
           <div class="right">
             <div class="topic">Designing Is My Passion</div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, porro veritatis pariatur, nobis voluptatem ipsum repellat nemo quisquam error reprehenderit recusandae odio vel, suscipit. Voluptas mollitia accusantium quaerat aspernatur labore dolorum placeat ipsa sint nam perspiciatis eos consectetur veritatis debitis, quis aliquam unde sed maiores sit! Hic molestiae optio iste
-              iure earum amet nostrum quaerat facere quae veniam maiores harum iusto aperiam vel inventore illo voluptatibus voluptates quo impedit voluptatum error vitae, omnis praesentium? Aperiam nulla non, nesciunt fuga rem perferendis alias et, temporibus, distinctio culpa unde a laborum libero ducimus. Facilis veniam sit praesentium, voluptatibus sint maxime iusto eaque.
+                        I love to design,my first design was when i was in my early teens i was obsessed with designs like those on poster,logos, and some designs of websites.I eventually ended up being a software designer and fell in love with web-design more than any other thing.It got to a stage where i had to learn more about web-design because of its wideness.
             </p>
             
               
@@ -598,7 +597,8 @@ footer .text span a:hover{
         <div class="skills-details">
           <div class="text">
             <div class="topic">Skills Reflects Our Knowledge</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus natus tenetur tempora? Quasi, rem quas omnis. Porro rem aspernatur reiciendis ut praesentium minima ad, quos, officia! Illo libero, et, distinctio repellat sed nesciunt est modi quaerat placeat. Quod molestiae, alias?</p>
+                    <p> Yeah, our skills reflect our knowledge you can easily judge and rate from this portfolio.Although im young but have a lot of experience in coding.  </p>
+
             <div class="experience">
               <div class="num">3</div>
               <div class="exp">
@@ -639,42 +639,42 @@ footer .text span a:hover{
               <i class="fas fa-desktop"></i>
             </div>
             <div class="topic">Web Devlopment</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>Im a web-developer,i can also help you in your website development.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-paint-brush"></i>
             </div>
             <div class="topic">Graphic Design</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>Im a graphic designer,i have less experince in graphic design than in coding.But im also exeptionally good in graphics.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-chart-line"></i>
             </div>
             <div class="topic">Digital Marketing</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>Im also a digital marketer.I can help you advertise your goods to various platforms.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fab fa-android"></i>
             </div>
             <div class="topic">Icon Design</div>
-            <p>I am also an icon designer.</p>
+            <p>Icon design is also a part of my graphic design works, i can help you to design or create your own fastastic logo for your organization.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-camera-retro"></i>
             </div>
             <div class="topic">Photography</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>I am a renowed photographer in Nigeria it was one of my very first proffessions before i got to know about web design and graphics but im still undoubtedly good.</p>
           </div>
           <div class="box">
             <div class="icon">
               <i class="fas fa-tablet-alt"></i>
             </div>
             <div class="topic">Apps Devlopment</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
+            <p>I can also build a web application for your company to make connections to your customers more easier.</p>
           </div>
         </div>
       </div>
@@ -686,7 +686,8 @@ footer .text span a:hover{
         <div class="title"><span>Contact Me</span></div>
         <div class="text">
           <div class="topic">Have Any Project?</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam neque ipsum corrupti dolores, facere numquam voluptate aspernatur sit perferendis qui nisi modi! Recusandae deserunt consequatur voluptatibus alias repellendus nobis eligendi.</p>
+          <p>You have a project you cant handle? <br>
+          you can call on me for assistance copy my phone number below.</p>
           <div class="button">
             <button>Let's Chat</button>
           </div>
