--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ footer .text span a:hover{
           </div>
         </ul>
         <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://web.facebook.com/profile.php?id=100088189956012"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
