--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ footer .text span a:hover{
         </ul>
         <div class="media-icons">
           <a href="https://web.facebook.com/profile.php?id=100088189956012"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/FRhois31351"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
